version/0.14/_sources/api/solver/_autosummary/settings/melting_heat.rst.txt
:orphan:

.. _melting_heat:

melting_heat
============

.. autoclass:: ansys.fluent.core.solver.settings_231.melting_heat.melting_heat

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_9>`       Select method for calculating material property.

:ref:`value <value>`                                             'value' child.

========================   ====================================================

.. rubric:: Included in:

====================================   ===================================

Parent                                                             Summary

====================================   ===================================
:ref:`fluid_child <fluid_child>`             'child_object_type' of fluid.

:ref:`mixture_child <mixture_child>`       'child_object_type' of mixture.

====================================   ===================================

